--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
-    "tsc": "rm -rf dist; tsc -p tsconfig.json --outDir dist --noEmit false --declarationMap true",
+    "tsc": "rm -rf dist; tsc -p tsconfig.json --outDir dist --noEmit false --declarationMap true --module commonjs",
     "test": "tsdx test",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
